--- a/marcas/uala..properties
+++ b/marcas/uala..properties
@@ -48,7 +48,7 @@ logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/u
 logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoblanco.png
 logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/avatar.png
 portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/portada.png
-fondoProcesador=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/fondoProcesador.png
+fondoProcesador=
 
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
 mastercard=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Mastercard.png
