--- a/marcas/feenicia.properties
+++ b/marcas/feenicia.properties
@@ -34,21 +34,21 @@ tablaHover=#f9f9f9
 skeleton=#e9e9e9
 skeletonLoad=#c1c1c1
 
-marca=#233A87
-marcaHover=#132B7A
-marcaBg=#b6c1df
+marca=#1226ab
+marcaHover=#1730d9
+marcaBg=#bec2db
 secun=#16112d
 bgLoading=rgba(255, 255, 255, 0.8)
 bgOverlay=rgba(8, 8, 65, 0.766)
-acento=#FF5874
-acentoHover=#F13555
+acento=#ed1d78
+acentoHover=#f04c94
 acentoBg=#fcd9e9
 
-logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoprincipal.png
-logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoblanco.png
-logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/avatar.png
-portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/portada.png
-fondoProcesador=
+logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/logoprincipal.png
+logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/logoblanco.png
+logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/avatar.png
+portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/portada.png
+fondoProcesador=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/fondoProcesador.png
 
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
 mastercard=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Mastercard.png
@@ -57,5 +57,5 @@ amex=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Amex.png
 contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contactless.png
 firma=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/firma.png
 
-marcaNombre=Ualabis
-procesador=Ualabis
+marcaNombre=Feenicia
+procesador=Feenicia
