--- a/marcas/feenicia.properties
+++ b/marcas/feenicia.properties
@@ -7,8 +7,8 @@ informativoHoverBg=#BFD7F7
 correcto=#36b57f
 correctoHover=#52CB98
 correctoBg=#C8EFDE
-advertencia=hsl(40.235, 100%, 50%)
-advertenciaHover=hsl(40.235, 100%, 60%)
+advertencia=#ffab00
+advertenciaHover=#ffbc33;
 advertenciaBg=#FFEECC
 error=#e62a00
 errorHover=#ff431a
@@ -16,7 +16,7 @@ errorBg=#FFCDC2
 errorHoverBg=#fbb6a6
 neutral=#545463
 neutralHover=#6c6c7f
-neutralBg=hsl(240, 8%, 86%)
+neutralBg=#d8d8de;
 neutralBg2=#f3f3f3
 textos=#0C0C21
 textoHover=#002862
@@ -53,6 +53,8 @@ fondoProcesador=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
 mastercard=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Mastercard.png
 amex=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Amex.png
+default=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/DEFAULT.png
+
 
 contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contactless.png
 firma=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/firma.png
