--- a/marcas/uala..properties
+++ b/marcas/uala..properties
@@ -53,6 +53,7 @@ fondoProcesador=
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
 mastercard=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Mastercard.png
 amex=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Amex.png
+default=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/DEFAULT.png
 
 contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contactless.png
 firma=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/firma.png
