--- a/marcas/serti copy.properties
+++ b/marcas/serti copy.properties
@@ -42,24 +42,23 @@ skeleton=#e9e9e9
 skeletonLoad=#c1c1c1
 
 #MARCA
-marcaNombre=Ualá Bis
-procesador=Ualá Bis
-marca=#233A87
-marcaHover=#132B7A
-marcaBg=#b6c1df
-secun=#16112d
+marcaNombre=Serti
+procesador=Serti
+marca=#0b6bb9
+marcaHover=#2b3990
+marcaBg=#bec2db
+secun=#0c1438
 bgLoading=rgba(255, 255, 255, 0.8)
-bgOverlay=rgba(8, 8, 65, 0.766)
-acento=#FF5874
-acentoHover=#F13555
-acentoBg=#fcd9e9
+acento=#5da9dd
+acentoHover=#2fd2e4
+acentoBg=#a5d2f0
 
 #LOGOS
-logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoprincipal.png
-logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/logoblanco.png
-logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/avatar.png
-portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/ualabis/portada.png
-fondoProcesador= $gradient: linear-gradient(to bottom, $marca, $secun); 
+logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/serti/logoprincipal.png
+logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/serti/logoblanco.png
+logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/serti/avatar.png
+portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/serti/portada.png
+fondoProcesador=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/serti/fondoProcesador.png
 
 #PAGOS
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
