--- a/marcas/feenicia.properties
+++ b/marcas/feenicia.properties
@@ -1,5 +1,8 @@
+#COLORES DE FONDO
 bodyBg=#f4f4f4
 bannerItem=#E9EBF8
+
+#COLORES DE ESTADO
 informativo=#2A6CD8
 informativoHover=#3F7EE6
 informativoBg=#D6E4FB
@@ -7,13 +10,15 @@ informativoHoverBg=#BFD7F7
 correcto=#36b57f
 correctoHover=#52CB98
 correctoBg=#C8EFDE
-advertencia=#ffab00
+advertencia=#ffab00;
 advertenciaHover=#ffbc33;
 advertenciaBg=#FFEECC
 error=#e62a00
 errorHover=#ff431a
 errorBg=#FFCDC2
 errorHoverBg=#fbb6a6
+
+#COLORES DE TEXTO
 neutral=#545463
 neutralHover=#6c6c7f
 neutralBg=#d8d8de;
@@ -28,12 +33,17 @@ claro=#f6f6f6
 pagina=#f3f3f3
 fondoCards=#ffffff
 fondoBlack=#1d1e22
+
+#TABLAS Y SKELETON
 tablaRow=#fafafa
 tablaRowAlt=#f1f1f1
 tablaHover=#f9f9f9
 skeleton=#e9e9e9
 skeletonLoad=#c1c1c1
 
+#MARCA
+marcaNombre=Feenicia
+procesador=Feenicia
 marca=#1226ab
 marcaHover=#1730d9
 marcaBg=#bec2db
@@ -44,20 +54,25 @@ acento=#ed1d78
 acentoHover=#f04c94
 acentoBg=#fcd9e9
 
+#LOGOS
 logo=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/logoprincipal.png
 logoInv=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/logoblanco.png
 logoAvatar=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/avatar.png
 portada=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/portada.png
 fondoProcesador=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/clientes/feenicia/fondoProcesador.png
 
+#PAGOS
 visa=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Visa.png
 mastercard=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Mastercard.png
 amex=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Amex.png
 default=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/DEFAULT.png
 
+#TIPO DE RECIBO
+venta=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/venta.svg
+devolucion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/devolucion.svg
+cancelacion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/Cancelacion.svg
 
-contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contactless.png
+#AUTORIZACIONES
+contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contacless.png
 firma=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/firma.png
-
-marcaNombre=Feenicia
-procesador=Feenicia
+efectivo=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/efectivo.png
