--- a/marcas/uala..properties
+++ b/marcas/uala..properties
@@ -68,9 +68,9 @@ amex=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/Amex.png
 default=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/DEFAULT.png
 
 #TIPO DE RECIBO
-venta=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/venta.svg
-devolucion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/devolucion.svg
-cancelacion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/Cancelacion.svg
+venta=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/venta.png
+devolucion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/devolucion.png
+cancelacion=https://serti-static.s3.us-east-1.amazonaws.com/Codice-Serti/img/iconos/Cancelacion.png
 
 #AUTORIZACIONES
 contactless=https://serti-static.s3.us-east-1.amazonaws.com/Recibos/img/contacless.png
